--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      # - about.qmd
       - case_study.qmd
 
 format:
